# husky_ur3_simulator_doortraversal

./: Documentation_for_iitb_work
door_planner/: CMakeLists.txt  package.xml  plugin.xml
door_planner/files/: action_with_cost.txt  best_succ_state.json  state_to_heuristic.txt  states.json
door_planner/include/: Door.h  arastar.h  door_planner.h  state.h
door_planner/src/: Door.cpp  arastar.cpp  door_planner.cpp  state.cpp
husky_ur3_gazebo/: CMakeLists.txt
husky_ur3_gazebo/config/: control.yaml
husky_ur3_gazebo/launch/: husky_empty_world.launch  husky_ur3_door_travsersal_world.launch  spawn_husky.launch
husky_ur3_gazebo/src/: animated_box.cc
husky_ur3_gripper_moveit_config/launch/: Omni_control.rviz
husky_ur3_gripper_moveit_config/scripts/: control_Husky_UR3_8.py  (+4 more)
maps/: arms_lab_world_draft1.pgm  arms_lab_world_draft1.yaml  arms_lab_world_draft2.pgm  arms_lab_world_draft2.yaml  door_traversal_map_0_1.pgm  door_traversal_map_0_1.yaml  door_traversal_map_0_2.pgm  door_traversal_map_0_2.yaml  door_traversal_map_2_005.pgm  door_traversal_map_2_005.yaml  door_traversal_map_3_005.pgm  door_traversal_map_3_005.yaml  door_traversal_test_world.pgm  door_traversal_test_world.yaml  door_traversal_v2_0_1.pgm  door_traversal_v2_0_1.yaml  door_traversal_v2_0_2.pgm  door_traversal_v2_0_2.yaml  door_traversal_world.pgm  door_traversal_world.yaml
robot_to_door_handle_msg/: CMakeLists.txt  package.xml
worlds/: door_traversal_test_world.world  door_traversal_world.world  door_traversal_world_1.world  door_traversal_world_2.world  door_traversal_world_3.world
(+12 files in other folders)
